welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:9: error: ';' expected but 'if' found.
    } if (x == "L") {
      ^